# cinematch

./: README.md  docker-compose.yml  docker.env
api/: .dockerignore  Cargo.toml  Dockerfile  bootstrap-database.Dockerfile
api/.sqlx/: query-0682b07314f5b2a9e98764eb06a7734c7d0742b4eba2b31e3219124cc371b86c.json  query-0a4639adc0ae2419e7c618fc4c095592a4a11ea3986f52048607c20b20bee509.json  query-0ed72253447ab1a5026d26023ee9d3a56204cb29e6bc8c294a82d53b3e5c04a2.json  query-16c7b1d9929ae9ffc53fff91859e9230401bddb40befb57b6acaec2ad617ee62.json  query-1db734d5764431fe86f5b5a0361bd0ff0211d73296dbd69cf308c6182f6e13e4.json  query-2352d13d4c82118afb0d40774ce66f42ddcf24d5d21d84187376363f06698908.json  query-2b732011e6e6b59a34a703b6f25743a9d1931f43010e78a5073dfa2b04ffdb7e.json  query-3337f75606d35bb85bfd078795227b517f58bc0868ac9ed1ead60cdb8248a8f2.json  query-424eddd17a7004f2a21ca3f57e7128b2ca2783d269badf23bb9e16c648df7553.json  query-428fca648548b86ed484b5fcb4f41e17467322a0f66066049f052bbef7f8c39e.json  query-44ff45a3b906a41dbda6a64a815bfa588982c6a86aa26ad2f8b65a3d5c1496be.json  query-451132d41e3e5b2bf51cfaf9e7d27c1ada46e81c1b44b81b404f6acf88dc6445.json  query-4df53cc8fc49df7ff5c7f8ac129b2d148b8743c06a94041a14932a0c51c0942c.json  query-526e91c76cbcfb2a405ad193c4ceb87f37773d72de4daeb6fc7dbd4593644ce9.json  query-54070a654597eedca1e3c23d18b6da20c813a4238813e2f7aa9e73f088326395.json  query-55e1af8dfda549512132de094d9ae1b34f1823eb725260a7e6977421b64bdc91.json  query-6212411cc665a14c53affbe3a0f805dcf4ea0f6fef864e66f5571275855fa6da.json  (+37 more)
api/migrations/: 20250319192424_create_tables.sql  (+1 more)
(+169 files in other folders)
